force-app/main/default/objects/Item_Snapshot_Field_Update__c/Item_Snapshot_Field_Update__c.object-meta.xml
<CustomObject>
    <label>Item Snapshot Field Update</label>
    <nameField>
        <label>Item Snapshot Field Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Snapshot Field Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>