force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/LiteralValue__c.field-meta.xml
<CustomField>
    <fullName>LiteralValue__c</fullName>
    <label>LiteralValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>