force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/LookupValue__c.field-meta.xml
<CustomField>
    <fullName>LookupValue__c</fullName>
    <label>LookupValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>