force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/LookupValueType__c.field-meta.xml
<CustomField>
    <fullName>LookupValueType__c</fullName>
    <label>LookupValueType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>