force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/NotifyAssignee__c.field-meta.xml
<CustomField>
    <fullName>NotifyAssignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotifyAssignee</label>
    <type>Checkbox</type>
</CustomField>