force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/Protected_x__c.field-meta.xml
<CustomField>
    <fullName>Protected_x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected_x</label>
    <type>Checkbox</type>
</CustomField>