force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/Reevaluate_On_Change__c.field-meta.xml
<CustomField>
    <fullName>Reevaluate_On_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reevaluate On Change</label>
    <type>Checkbox</type>
</CustomField>