force-app/main/default/objects/Item_Snapshot_Field_Update__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>TargetObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>